Fixed text size and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,8 @@ nav {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 10vh;
-    padding-top: 20px;
+    height: 8vh;
+    padding-top: 50px;
     margin-left: auto;
     margin-right: auto;
     background: linear-gradient(90deg, rgba(0,212,255,1) 14%, rgba(53,41,138,1) 39%);
@@ -31,8 +31,9 @@ ul {
 
 li {
     list-style-type: none;
-    line-height: 5.5;
-    vertical-align: middle;
+    margin-right: 100px;
+    margin-left: 100px;
+    font-size: 1.5rem;
 }
 
 a { 
